--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,12 @@
     <dependency>
       <groupId>com.jfoenix</groupId>
       <artifactId>jfoenix</artifactId>
-      <version>0.0.2</version>
+      <version>1.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>io.reactivex</groupId>
+      <artifactId>rxjavafx</artifactId>
+      <version>0.1.4</version>
     </dependency>
   </dependencies>
 
