--- a/pom.xml
+++ b/pom.xml
@@ -34,18 +34,18 @@
     <dependency>
       <groupId>uk.co.caprica</groupId>
       <artifactId>vlcj</artifactId>
-      <!--<version>3.10.1</version>-->
-      <version>4.0.0-SNAPSHOT</version>
+      <version>3.10.1</version>
+      <!-- <version>4.0.0-SNAPSHOT</version> -->
     </dependency>
     <dependency>
       <groupId>com.jfoenix</groupId>
       <artifactId>jfoenix</artifactId>
-      <version>1.0.0</version>
+      <version>1.10.0</version>
     </dependency>
     <dependency>
-      <groupId>io.reactivex</groupId>
+      <groupId>io.reactivex.rxjava2</groupId>
       <artifactId>rxjavafx</artifactId>
-      <version>0.1.4</version>
+      <version>2.2.0</version>
     </dependency>
   </dependencies>
 
