--- a/pom.xml
+++ b/pom.xml
@@ -1,20 +1,28 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-
   <groupId>org.mbari.vars</groupId>
   <artifactId>jsharktopoda</artifactId>
   <version>1.0-SNAPSHOT</version>
   <packaging>jar</packaging>
-
   <name>jsharktopoda</name>
   <url>http://maven.apache.org</url>
-
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <java.version>1.8</java.version>
   </properties>
-
   <dependencies>
+    <dependency>
+      <groupId>org.mbari.vcr4j</groupId>
+      <artifactId>vcr4j-core</artifactId>
+      <version>4.0.0</version>
+    </dependency>
+    <dependency>
+      <groupId>org.mbari</groupId>
+      <artifactId>mbarix4j</artifactId>
+      <version>1.10.0</version>
+    </dependency>
+    <!-- https://mvnrepository.com/artifact/junit/junit -->
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
@@ -48,7 +56,6 @@
       <version>2.2.0</version>
     </dependency>
   </dependencies>
-
   <repositories>
     <repository>
       <snapshots>
@@ -59,17 +66,18 @@
       <url>http://dl.bintray.com/jerady/maven</url>
     </repository>
   </repositories>
-
   <build>
     <plugins>
-      <!-- Use Java 8.0 -->
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.7.0</version>
         <configuration>
-          <source>1.8</source>
-          <target>1.8</target>
-        </configuration>
+        <source>${java.version}</source>
+        <target>${java.version}</target>
+        <showWarnings>true</showWarnings>
+        <showDeprecation>true</showDeprecation>
+      </configuration>
       </plugin>
     </plugins>
   </build>
