Added bulk of Sharktopoda parsing from https://github.com/mbari-media-management/Sharktopoda/blob/main/docs/REQUIREMENTS.md

--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,14 @@
   <url>http://maven.apache.org</url>
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>1.8</java.version>
+    <java.version>9</java.version>
   </properties>
   <dependencies>
+    <dependency>
+      <groupId>org.mbari.vcr4j</groupId>
+      <artifactId>vcr4j-sharktopoda</artifactId>
+      <version>4.0.0</version>
+    </dependency>
     <dependency>
       <groupId>org.mbari.vcr4j</groupId>
       <artifactId>vcr4j-core</artifactId>
