--- a/pom.xml
+++ b/pom.xml
@@ -37,12 +37,12 @@
     <dependency>
       <groupId>de.jensd</groupId>
       <artifactId>fontawesomefx-commons</artifactId>
-      <version>8.12</version>
+      <version>9.1.2</version>
     </dependency>
     <dependency>
       <groupId>de.jensd</groupId>
       <artifactId>fontawesomefx-materialicons</artifactId>
-      <version>2.2.0</version>
+      <version>2.2.0-9.1.2</version>
     </dependency>
     <dependency>
       <groupId>uk.co.caprica</groupId>
@@ -53,12 +53,22 @@
     <dependency>
       <groupId>com.jfoenix</groupId>
       <artifactId>jfoenix</artifactId>
-      <version>1.10.0</version>
+      <version>1.11.0</version>
     </dependency>
     <dependency>
       <groupId>io.reactivex.rxjava2</groupId>
       <artifactId>rxjavafx</artifactId>
-      <version>2.2.0</version>
+      <version>2.2.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.slf4j</groupId>
+      <artifactId>slf4j-api</artifactId>
+      <version>1.7.25</version>
+    </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.2.3</version>
     </dependency>
   </dependencies>
   <repositories>
