double checking to remove any java 9-based jars

--- a/src/main/resources/i18n.properties
+++ b/src/main/resources/i18n.properties
@@ -8,3 +8,7 @@ portchooser.title=UPD port ...
 portchooser.header=Specify UDP port
 portchooser.content=UDP port:
 portchooser.prompt=Enter port number
+app.quit=Quit
+app.settings=Open settings
+app.file=Open file
+app.url=Open url
