--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,9 @@
 <?xml version="1.0"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
+  <prerequisites>
+    <maven>3.0.5</maven>
+  </prerequisites>
   <groupId>org.mbari.vars</groupId>
   <artifactId>jsharktopoda</artifactId>
   <version>0.1.4-SNAPSHOT</version>
@@ -30,9 +33,24 @@
     <!-- Should the client downgrade if the server version is older than the local version? -->
     <app.acceptDowngrade>false</app.acceptDowngrade>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <java.version>1.8</java.version>
+    <java.version>11</java.version>
   </properties>
   <dependencies>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-controls</artifactId>
+      <version>11.0.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-media</artifactId>
+      <version>11.0.2</version>
+    </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-swing</artifactId>
+      <version>11.0.2</version>
+    </dependency>
     <dependency>
       <groupId>org.mbari.vcr4j</groupId>
       <artifactId>vcr4j-sharktopoda</artifactId>
@@ -58,12 +76,12 @@
     <dependency>
       <groupId>de.jensd</groupId>
       <artifactId>fontawesomefx-commons</artifactId>
-      <version>9.1.2</version>
+      <version>11.0</version>
     </dependency>
     <dependency>
       <groupId>de.jensd</groupId>
       <artifactId>fontawesomefx-materialicons</artifactId>
-      <version>2.2.0-9.1.2</version>
+      <version>2.2.0-11</version>
     </dependency>
     <dependency>
       <groupId>uk.co.caprica</groupId>
@@ -74,7 +92,7 @@
     <dependency>
       <groupId>com.jfoenix</groupId>
       <artifactId>jfoenix</artifactId>
-      <version>9.0.4</version>
+      <version>9.0.8</version>
     </dependency>
     <dependency>
       <groupId>io.reactivex.rxjava2</groupId>
@@ -117,11 +135,11 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.7.0</version>
         <configuration>
-        <source>${java.version}</source>
-        <target>${java.version}</target>
-        <showWarnings>true</showWarnings>
-        <showDeprecation>true</showDeprecation>
-      </configuration>
+          <source>${java.version}</source>
+          <target>${java.version}</target>
+          <showWarnings>true</showWarnings>
+          <showDeprecation>true</showDeprecation>
+        </configuration>
       </plugin>
       <!-- Compile project jar to appdir -->
       <plugin>
@@ -209,7 +227,7 @@
       <plugin>
         <groupId>com.zenjava</groupId>
         <artifactId>javafx-maven-plugin</artifactId>
-        <version>8.6.0</version>
+        <version>8.8.3</version>
         <configuration>
           <mainClass>${app.mainClass}</mainClass>
           <verbose>true</verbose>
