--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,7 @@ plugins {
 
 version = "0.2.0"
 
-sourceCompatibility = 11
-targetCompatibility = 11
+//sourceCompatibility = JavaVersion.VERSION_11
 
 repositories {
     jcenter()
