--- a/pom.xml
+++ b/pom.xml
@@ -140,6 +140,14 @@
           <showWarnings>true</showWarnings>
           <showDeprecation>true</showDeprecation>
         </configuration>
+        <dependencies>
+          <dependency>
+            <!-- 3 -->
+            <groupId>org.ow2.asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>7.0</version>
+          </dependency>
+        </dependencies>
       </plugin>
       <!-- Compile project jar to appdir -->
       <plugin>
