--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,14 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxjavafx:2.2.2'
     implementation 'org.slf4j:slf4j-api:1.7.25'
     implementation "com.jfoenix:jfoenix:9.0.8"
-    implementation "de.jensd:fontawesomefx-commons:11.0"
-    implementation "de.jensd:fontawesomefx-materialicons:2.2.0-11"
+    //implementation "de.jensd:fontawesomefx-commons:11.0"
+    //implementation "de.jensd:fontawesomefx-materialicons:2.2.0-11"
+    implementation "org.kordamp.ikonli:ikonli-javafx:11.1.0"
+    implementation 'org.kordamp.ikonli:ikonli-material-pack:11.1.0'
     implementation "org.mbari:mbarix4j:${mbarix4j}"
     implementation "org.mbari.vcr4j:vcr4j-core:${vcr4j}"
     implementation "org.mbari.vcr4j:vcr4j-sharktopoda:${vcr4j}"
+    implementation 'org.slf4j:slf4j-api:1.7.25'
     implementation "uk.co.caprica:vlcj:3.10.1"
     runtime 'ch.qos.logback:logback-classic:1.2.3'
     testImplementation 'junit:junit:4.12'
