--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 plugins {
   id 'application'
-  id 'com.adarshr.test-logger' version '2.0.0'
-  id 'org.openjfx.javafxplugin' version '0.0.8'
-  id "org.beryx.jlink" version "2.17.3"
-  id "org.javamodularity.moduleplugin" version "1.5.0"
-  id "com.github.ben-manes.versions" version "0.28.0"
+  id 'com.adarshr.test-logger' version '3.2.0'
+  id 'org.openjfx.javafxplugin' version '0.0.12'
+  id "org.beryx.jlink" version "2.25.0"
+//   id "org.javamodularity.moduleplugin" version "1.8.10"
+  id "com.github.ben-manes.versions" version "0.42.0"
 }
 
-version = "0.2.0"
+version = "1.0.0"
 
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = 17
+targetCompatibility = 17
 
 repositories {
     jcenter()
@@ -29,7 +29,7 @@ repositories {
 }
 
 javafx {
-    version = "14"
+    version = "18"
     modules = [ 
         'javafx.base',
         'javafx.controls',
@@ -60,27 +60,27 @@ test {
 
 def vcr4j = "4.4.1.jre11"
 dependencies {
-    implementation 'io.reactivex.rxjava2:rxjavafx:2.2.2'
-    implementation 'org.kordamp.ikonli:ikonli-material-pack:11.3.5'
-    implementation 'org.slf4j:slf4j-api:1.8.0-beta4'
-    implementation "com.jfoenix:jfoenix:9.0.9"
+    implementation "com.jfoenix:jfoenix:9.0.10"
+    implementation "io.reactivex.rxjava2:rxjavafx:2.2.2"
     implementation "org.kordamp.ikonli:ikonli-javafx:11.3.5"
+    implementation "org.kordamp.ikonli:ikonli-material-pack:11.3.5"
     implementation "org.mbari:mbarix4j:2.0.5.jre11"
     implementation "org.mbari.vcr4j:vcr4j-core:${vcr4j}"
     implementation "org.mbari.vcr4j:vcr4j-sharktopoda:${vcr4j}"
-    implementation "uk.co.caprica:vlcj:3.10.1"
-    runtimeOnly('ch.qos.logback:logback-classic:1.3.0-alpha4')  {
+    implementation "org.slf4j:slf4j-api:2.0.0-alpha7"
+    runtimeOnly('ch.qos.logback:logback-classic:1.3.0-alpha14')  {
         exclude group: 'javax.activation'
     }
     runtimeOnly 'javax.servlet:javax.servlet-api:4.0.1'
     runtimeOnly 'org.fusesource.jansi:jansi:1.18'
-    testImplementation 'junit:junit:4.12'
+    testImplementation 'junit:junit:4.13.2'
 }
 
 
-mainClassName = 'jsharktopoda/org.mbari.m3.jsharktopoda.javafx.JSharktopoda'
+// mainClassName = 'jsharktopoda/org.mbari.m3.jsharktopoda.javafx.JSharktopoda'
 application {
-    mainClassName = mainClassName
+    mainModule = 'jsharktopoda'
+    mainClassName = 'org.mbari.m3.jsharktopoda.javafx.JSharktopoda'
     applicationDefaultJvmArgs = runtimeJvmArgs
 }
 
@@ -104,7 +104,7 @@ jlink {
     addExtraDependencies("javafx")
 
     jpackage {
-        jpackageHome = System.getenv("JPACKAGE_HOME")
+        // jpackageHome = System.getenv("JPACKAGE_HOME")
         // jpackageHome = "C:\\Program Files\\AdoptOpenJDK\\jdk-14.0.0.36-hotspot"
 
         def customInstallerOptions = [
