--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 plugins {
   id 'application'
   id 'com.adarshr.test-logger' version '3.2.0'
-  id 'org.openjfx.javafxplugin' version '0.0.12'
+  id 'org.openjfx.javafxplugin' version '0.0.13'
   id "org.beryx.jlink" version "2.25.0"
 //   id "org.javamodularity.moduleplugin" version "1.8.10"
   id "com.github.ben-manes.versions" version "0.42.0"
@@ -29,7 +29,7 @@ repositories {
 }
 
 javafx {
-    version = "18"
+    version = "19"
     modules = [ 
         'javafx.base',
         'javafx.controls',
@@ -67,12 +67,12 @@ dependencies {
     implementation "org.mbari:mbarix4j:2.0.5.jre11"
     implementation "org.mbari.vcr4j:vcr4j-core:${vcr4j}"
     implementation "org.mbari.vcr4j:vcr4j-sharktopoda:${vcr4j}"
-    implementation "org.slf4j:slf4j-api:2.0.0-alpha7"
-    runtimeOnly('ch.qos.logback:logback-classic:1.3.0-alpha14')  {
+    implementation "org.slf4j:slf4j-api:2.0.2"
+    runtimeOnly('ch.qos.logback:logback-classic:1.4.1')  {
         exclude group: 'javax.activation'
     }
     runtimeOnly 'javax.servlet:javax.servlet-api:4.0.1'
-    runtimeOnly 'org.fusesource.jansi:jansi:1.18'
+    runtimeOnly 'org.fusesource.jansi:jansi:2.4.0'
     testImplementation 'junit:junit:4.13.2'
 }
 
