--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
 plugins {
   id 'application'
-  id 'com.adarshr.test-logger' version '3.2.0'
-  id 'org.openjfx.javafxplugin' version '0.0.13'
-  id "org.beryx.jlink" version "2.25.0"
+  id 'com.adarshr.test-logger' version '4.0.0'
+  id 'org.openjfx.javafxplugin' version '0.1.0'
+  id "org.beryx.jlink" version "3.0.1"
 //   id "org.javamodularity.moduleplugin" version "1.8.10"
-  id "com.github.ben-manes.versions" version "0.42.0"
+  id "com.github.ben-manes.versions" version "0.51.0"
 }
 
 version = "1.0.0"
 
-sourceCompatibility = 17
-targetCompatibility = 17
+sourceCompatibility = 21
+targetCompatibility = 21
 
 repositories {
     mavenLocal()
@@ -29,7 +29,7 @@ repositories {
 }
 
 javafx {
-    version = "18.0.1"
+    version = "21"
     modules = [ 
         'javafx.base',
         'javafx.controls',
@@ -50,30 +50,30 @@ def runtimeJvmArgs = [
         '--add-reads', 'jsharktopoda.merged.module=org.slf4j',
 ]
 
-test {
-    moduleOptions {
-        runOnClasspath = true
-    }
-    testlogger {
-        theme 'mocha' // task level
-    }
-}
+// test {
+//     moduleOptions {
+//         runOnClasspath = true
+//     }
+//     testlogger {
+//         theme 'mocha' // task level
+//     }
+// }
 
-def vcr4j = "5.0.0.jre17-SNAPSHOT"
+def vcr4j = "5.2.0"
 dependencies {
     implementation "com.jfoenix:jfoenix:9.0.10"
-    implementation "io.reactivex.rxjava3:rxjava:3.1.5"
+    implementation "io.reactivex.rxjava3:rxjava:3.1.8"
     implementation "org.kordamp.ikonli:ikonli-javafx:12.3.1"
     implementation "org.kordamp.ikonli:ikonli-material-pack:12.3.1"
     implementation "org.mbari:mbarix4j:2.0.5.jre11"
     implementation "org.mbari.vcr4j:vcr4j-core:${vcr4j}"
     implementation "org.mbari.vcr4j:vcr4j-remote:${vcr4j}"
-    implementation "org.slf4j:slf4j-api:2.0.0-alpha7"
-    runtimeOnly('ch.qos.logback:logback-classic:1.3.0-alpha16') {
+    implementation "org.slf4j:slf4j-api:2.0.12"
+    runtimeOnly('ch.qos.logback:logback-classic:1.5.6') {
         exclude group: 'javax.activation'
     }
     runtimeOnly 'javax.servlet:javax.servlet-api:4.0.1'
-    runtimeOnly 'org.fusesource.jansi:jansi:2.4.0'
+    runtimeOnly 'org.fusesource.jansi:jansi:2.4.1'
     testImplementation 'junit:junit:4.13.2'
 }
 
